--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
@@ -42,7 +42,7 @@
                         </a>
 </h2>
                     <ul>
-                        <li><a href="">Lessenrooster</a></li>
+                        <li><a href="~/Deelpagina's/LessenRoosterVMo.cshtml">Lessenrooster</a></li>
                         <li><a href="">Module</a></li>
                     </ul>
                 </li>
