--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Header.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Header.cshtml
@@ -49,7 +49,7 @@
         else
         {
             <form id="login" action="" method="post" class="loginForm">
-                <input type="text" name="Login-CursistNummer" id="Login-CursistNummer" />  <button type="submit" name="action" value="login">Inloggen</button>
+                <input type="number" required name="Login-CursistNummer" id="Login-CursistNummer" />  <button type="submit" name="action" value="login">Inloggen</button>
             </form>
         }
 
