--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Evenementen.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Evenementen.cshtml
@@ -2,34 +2,39 @@
     Layout = "~/Shared/_Layout.cshtml";
     Page.Title = "Evenementen";
 
-    string action = "";
-
-    if (IsPost)
-    {
-        action = Request["action"];
-
-        if (action.Equals("login") && Session["cursist"] == null)
+    string action = ""; 
+     if (IsPost)
+     {
+        if (action != null)
         {
-            Session["cursist"] = Administratix.Model.Cursist.GetCursistByCursistNummer(Convert.ToInt32(Request["Login-CursistNummer"]));
+            action = Request["action"];
+        
+            if (action.Equals("login") && Session["cursist"] == null)
+            {
+                Session["cursist"] = Administratix.Model.Cursist.GetCursistByCursistNummer(Convert.ToInt32(Request["Login-CursistNummer"]));
+            }
+            if (action.Equals("logout"))
+            {
+                Session["cursist"] = null;
+            }
         }
-        if (action.Equals("logout"))
-        {
-            Session["cursist"] = null;
-        }
-    }
+     }
+    
 
     //Dit is om nederlandse weekdagen te krijgen
     System.Globalization.CultureInfo culture = new System.Globalization.CultureInfo("nl-BE");
 
     string message = "Alles gaat goed";
     List<Administratix.BLL.Evenement> evenementenLijst = new List<Administratix.BLL.Evenement>();
-
-    evenementenLijst = Administratix.Model.Evenement.EvenementSelectAll();
-    Administratix.BLL.Cursist cursist = (Administratix.BLL.Cursist)Session["cursist"];
+    
+    if (Session["cursist"] != null)
+    {
+        Administratix.BLL.Cursist cursist = (Administratix.BLL.Cursist)Session["cursist"];
+        evenementenLijst = Administratix.Model.Evenement.EvenementSelectAll();
         
         if (action.Equals("inschrijven"))
         {
-            message = Administratix.Model.EvenementInschrijving.InsertEvenementInschrijving(cursist.CursistNummer, Request["inschrijven"], Request["opmerkingen-inschrijving"]);
+            message = Administratix.Model.EvenementInschrijving.InsertEvenementInschrijving(cursist.CursistNummer, Request["evenementId-inschrijving"], Request["opmerkingen-inschrijving"]);
         }
     }   
     
@@ -113,15 +118,14 @@
             </div>
             }
         </div>
-        <form id="evenement-inschrijven" method="post" action=""></form>
+        
               @for (int i = 0; i < evenementenLijst.Count; i++)
               {
-                
                     Administratix.BLL.Evenement evenement = evenementenLijst[i];
                     <div class="containerCalendarRow @(i%2 == 0 ? "":"shaded")">
-                        <form id="evenement-inschrijving" method="post" action="">
+                        
                             <div class="containerCalendarTitle">
-                                @evenement.Naam <input type="hidden" name="evenement-id" id="evenement-id" value="@evenement.Id" />
+                                @evenement.Naam
                             </div>
                             <div class="containerCalendarTitle">
                                 @evenement.Datum
@@ -137,14 +141,16 @@
                             </div>
                             @if (Session["cursist"] != null)
                             {
-                                <div class="containerCalendarTitle">
-                                    <input type="text" name="opmerkingen-inschrijving" id="opmerkingen-inschrijving" />
-                                </div>
-                                <div class="containerCalendarTitle">
-                                    <button type="submit" name="inschrijven" value="@evenement.Id">Schrijf me in!</button>
-                                </div>
+                                <form id="evenementen-inschrijven" action="" method="post">
+                                    <div class="containerCalendarTitle">
+                                        <input type="text" name="opmerkingen-inschrijving" id="opmerkingen-inschrijving" />
+                                        <input type="hidden" name="evenementId-inschrijving" id="evenementId-inschrijving" value="@evenement.Id" />
+                                    </div>
+                                    <div class="containerCalendarTitle">
+                                        <button type="submit" name="inschrijven" value="inschrijven">Schrijf me in!</button>
+                                    </div>
+                                </form>
                             }
-                        </form>
                     </div>
                 
 
